grammar.txt
<TYPE> ::= "operation" | "condition" | "input/output" | "start/stop"
<BLOCK> ::= "block"
<LINE> ::= "line"
<COLOR> ::= "color"
<TEXT> ::= "text"
<FRAME> ::= "frame"
<TYPE_NAME> ::= "type"
<CONNECT> ::= "connect"
<STRING> ::= "\"" <any_char>+ "\""
<NAME> ::= <letter> <letter_or_digit>*
<letter> ::= "a" | "b" | "c" | ... | "z" | "A" | "B" | "C" | ... | "Z" | "_"
<letter_or_digit> ::= <letter> | "0" | "1" | "2" | ... | "9"
<any_char> ::= any valid character (except `"` for simplicity)

------------------------------------------------------------------------------

<input> ::= <file> <EOF>
<file> ::= <lines> | <lines> <file>
<lines> ::= <BLOCK> <NAME> "{" <block_content> "}" | <LINE> <NAME> "{" <line_content> "}" 
<block_content> ::= <block_line> | <block_line> <block_content>
<block_line> ::= <COLOR> ":" <krotka> | <TYPE_NAME> ":" <TYPE> | <TEXT> ":" <STRING> | <FRAME> ":" <krotka>
<krotka> ::= <NUMBER> "," <NUMBER> "," <NUMBER>
<line_content> ::= <line_line> | <line_line> <line_content>
<line_line> ::= <COLOR> ":" <krotka> | <TYPE_NAME> ":" <TYPE> | <TEXT> ":" <STRING> | <CONNECT> ":" <connect_nt>
<connect_nt> ::= <dowolne> ">" <NAME> | <NAME> "<" <dowolne>
<dowolne> ::= <NAME> | <NAME> "," <dowolne>
